create Autoclicker.py
create Clickercell.py
create Clickergame.py
create Enemy.py
create Treasure.py
delete attributs game, gold, feedpower, upgrade_feed_cost, fade_factor, fade_list from ClickerCell
add attributs gold, fade_factor, fade_list, feedpower, feedpower_upgrade_cost to ClickerGame
add add_gold(), add_weight(), hit_treasure(), upgrade_feed_power() to ClickerGame, change add_weight(), delete add_gold(), hit_treasure(), upgrade_feed_power() from ClickerCell

Update plus propre; codage des phases en cours