@@ -100,7 +100,7 @@
     ClickerCell:
         id: clicker_cell
         center: root.width * 3 / 8, root.height * 3 / 8 +25 +10
-        jauge_pv: root.width*root.limit_x*4/5+20
+        jauge_pv: root.width*root.limit_x*4/5+40
 
         canvas:
 
@@ -122,7 +122,7 @@
             Rectangle:
                 id:jauge
                 pos:50, root.height-30
-                size: root.width*root.limit_x*4/5+20, 20
+                size: root.width*root.limit_x*4/5+40, 20
             Color:
                 rgba: 0,1,0,1
             Rectangle:
@@ -180,15 +180,22 @@
         text:"%d/%d" % (clicker_cell.cell_weight, 100)
         font_size:"20"
         center_y:root.height-30-10
-        center_x:root.width*root.limit_x*4/5+40
+        center_x:root.width*root.limit_x*4/5+60
         color: 1, 1, 1, 1
 
     Label:
-        text:"%d" % int(root.timer)
-        font_size:"40"
-        top: root.height+30
-        center_x:20
-        color: 1,0,0,1
+        text: "%d" % int(root.timer)
+        font_size: "40"
+        #top: root.height+30
+        pos: root.pos[0]-30, root.height -70
+        color: 1, 0, 0, 1
+
+    Label:
+        text: "Stage: %d" % root.phase
+        font_size: "40"
+        top: root.height - 15
+        center_x:root.width*6/8 - 80
+        color: 1, 0.5, 0, 1
 
     Label:
         text:str(root.gameover)
