@@ -1,0 +1,3 @@
+-lors de la collision avec un ennemi, faire en sorte que la transition depuis l'ancienne position, size
+vers la nouvelle position, size soit plus douce (en utilisant Animation() et en tenant compte du fade)
+-
