@@ -8,3 +8,6 @@ add attributs gold, fade_factor, fade_list, feedpower, feedpower_upgrade_cost to
 add add_gold(), add_weight(), hit_treasure(), upgrade_feed_power() to ClickerGame, change add_weight(), delete add_gold(), hit_treasure(), upgrade_feed_power() from ClickerCell
 
 Update plus propre; codage des phases en cours
+
+4 phases codées
+update kill_enemy pour indiquer si l'ennemi a été tué par le joueur (et donc ajouter de l'or ou pas)
